--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "nhd-load": "./bin/cli.js"
   },
   "scripts": {
-    "test": "mocha test",
+    "test": "mocha test --timeout 5000",
     "download": "node ./exec.js"
   },
   "keywords": [
