--- a/package.json
+++ b/package.json
@@ -13,22 +13,20 @@
   "keywords": [
     "NHD",
     "postgis",
+    "filegdb",
+    "postgresql",
+    "gis",
     "load"
   ],
   "author": "apburnes <bizzurnzz@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "glob": "^5.0.1",
-    "jsftp": "^1.4.1",
     "lodash": "^3.5.0",
     "minimist": "^1.1.1",
-    "nomnom": "^1.8.1",
     "ogr2ogr": "^0.5.1",
     "pg-query": "^0.11.0",
-    "pg.js": "^4.1.1",
-    "prompt": "^0.2.14",
-    "require-dir": "^0.1.0",
-    "unzip": "^0.1.11"
+    "pg.js": "^4.1.1"
   },
   "devDependencies": {
     "chai": "^1.10.0",
