--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nhd-load",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Load NHD fileGDB into postgis db",
   "main": "index.js",
   "bin": {
@@ -34,7 +34,8 @@
     "minimist": "^1.1.1",
     "ogr2ogr": "^0.5.1",
     "pg-query": "^0.11.0",
-    "pg.js": "^4.1.1"
+    "pg.js": "^4.1.1",
+    "require-dir": "^0.3.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
